fix glitch on mobile.

--- a/app/javascript/styles/containers.scss
+++ b/app/javascript/styles/containers.scss
@@ -53,6 +53,7 @@
     box-sizing: border-box;
 
     @media screen and (max-width: 400px) {
+      width: 100%;
       margin-top: 0;
       padding: 20px;
     }
